<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_first_text">Canberra is the capital of Australia</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show answer</string>
    <string name="judgment_toast">Cheating is wrong!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="prev_button">Prev</string>
    <string name="finish_button">Finish</string>
    <string name="play_again">Play Again!</string>
    <string name="game_over">The quiz is over</string>
    <string name="your_results">Your results:</string>
    <string name="results">%1$d/6</string> <!-- %1$d - это плейсхолдер для целого числа -->
    <string name="cheating_questions">Cheating questions: </string>




</resources>